fix save body error